# Projects

./: .gitignore  README.md
Auto-Authenticate/: authenticate.py  script.sh
CGPA/: Makefile  README.md  college.cpp  college.h  course.cpp  course.h  main.cpp  semester.cpp  semester.h
CGPA-Dockerized/: Dockerfile  README.md
CGPA-Dockerized/grades/: 1  2  3  4  5
CodingChallenges/: Makefile  cwcc.sh
CodingChallenges/JSON Parser/: Makefile  exit.h  file.c  file.h  gram2.json  lexer.c  lexer.h  main.c  parser.c  parser.h  token.h  token_type.h  util.c  util.h
CodingChallenges/mcut/: Cargo.toml
CodingChallenges/wc/: Main.java
CodingChallenges/zipf/: Cargo.toml
Compiler/: data.h  defs.h  scan.c
Extensions/Beastify/: manifest.json
Extensions/Borderify/: manifest.json
Extensions/FocusModeExtension/: background.js  manifest.json
Extensions/HelloExtension/: hello.html  manifest.json
Extensions/ReadingTimeExtension/: manifest.json  popup.html
Extensions/TabExtension/: manifest.json
GeneticAlgorithms/: chromosome.h  gaoperators.cpp  gaoperators.h  main.cpp
Hackattic/HelpMeUnpack/: Cargo.toml
Hackattic/MiniMiner/: Cargo.toml
Hackattic/PasswordHashing/: go.mod  main.go
LogoToJS/: commands.py  parse_input.py  template.py
Todo/backend/: Cargo.toml
Todo/backend/src/: lib.rs  main.rs
Todo/backend/src/logic/: auth.rs  error.rs  mod.rs  router.rs  routes.rs  todo.rs
Todo/backend/tests/: api_tests.rs
Todo/frontend/: settings.gradle.kts
Weather/: main.mjs  package.json
guessing_game/src/: main.rs
minigrep/src/: main.rs
(+35 files in other folders)
