[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }